# analytics-basic

./: .gitignore  .pre-commit-config.yaml  Makefile  config.py  main.py  pyproject.toml
.github/workflows/: main.yaml
notebooks/: eda_plus_prediction.ipynb  task-sample.ipynb
