[project]
name = "analytics"
version = "0.1.0"
description = ""
authors = [{ name = "Arthur"}]
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "nltk (>=3.9.4,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
]

[dependency-groups]
dev = [
    "black[jupyter]>=26.5.1",
    "ipykernel (>=7.2.0,<8.0.0)",
    "isort>=8.0.1",
    "make>=0.1.6.post2",
    "matplotlib (>=3.10.8,<4.0.0)",
    "nbautoexport>=0.5.2",
    "pprintpp (>=0.4.0,<0.5.0)",
    "pre-commit>=4.6.0",
    "pyperclip (>=1.11.0,<2.0.0)",
    "pyspark (>=4.1.1,<5.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "ruff>=0.15.20",
]
